[package]
name = "no_bs_fcs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Basic tool for manipulating and analyzing Flow Cytometry Standard (FCS) files."
repository = "https://github.com/cookienocreams/no_bs_fcs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
thiserror = "1.0.58"
polars = { version = "0.39.2", features = ["lazy"]}
