[package]
name = "fcs_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Basic tool for manipulating and analyzing Flow Cytometry Standard (FCS) files."
repository = "https://github.com/cookienocreams/fcs_rs"
readme = "README.md"
keywords = ["FCS", "flow cytometry", ".fcs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
thiserror = "1.0.58"
polars = { version = "0.39.2", features = ["lazy"]}
